--- a/ourbookstore/src/styles.scss
+++ b/ourbookstore/src/styles.scss
@@ -7,3 +7,17 @@
 body {
   font-family: 'Public Sans', sans-serif;
 }
+
+
+.leftside{
+  background-color:hsla(0,100%,50%,1);
+  background-image:
+  radial-gradient(at 40% 20%, hsla(229,100%,74%,1) 0px, transparent 50%),
+  radial-gradient(at 80% 0%, hsla(30,100%,56%,1) 0px, transparent 50%),
+  radial-gradient(at 0% 50%, hsla(196,100%,93%,1) 0px, transparent 50%),
+  radial-gradient(at 80% 50%, hsla(181,100%,76%,1) 0px, transparent 50%),
+  radial-gradient(at 0% 100%, hsla(223,100%,77%,1) 0px, transparent 50%),
+  radial-gradient(at 80% 100%, hsla(83,100%,70%,1) 0px, transparent 50%),
+  radial-gradient(at 0% 0%, hsla(184,100%,76%,1) 0px, transparent 50%);
+
+}
