adding home and sidebar with nested routes

--- a/ourbookstore/src/app/components/users/auth/user-login/user-login.component.html
+++ b/ourbookstore/src/app/components/users/auth/user-login/user-login.component.html
@@ -1,74 +1,103 @@
-<section class="h-screen w-full flex flex-col text-zinc-900 p-4 items-center bg-gradient-to-br  from-yellow-600/50   to-yellow-600/10 ">
-    
-   
-    <div class="h-full flex items-center ">
-        <div class="border bg-neutral-100 border-zinc-950/10 overflow-hidden grid lg:grid-cols-2 gap-8 lg:h-[100vh] lg:w-screen">
-            
-           <div class="grid place-content-center">
-            <div class="flex flex-col gap-5 justify-center p-4 lg:p-8 lg:pr-16 ">
-                <div class="flex flex-col items-center gap-4">
-                    <!-- <div class="text-orange-600">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 6v.75m0 3v.75m0 3v.75m0 3V18m-9-5.25h5.25M7.5 15h3M3.375 5.25c-.621 0-1.125.504-1.125 1.125v3.026a2.999 2.999 0 0 1 0 5.198v3.026c0 .621.504 1.125 1.125 1.125h17.25c.621 0 1.125-.504 1.125-1.125v-3.026a2.999 2.999 0 0 1 0-5.198V6.375c0-.621-.504-1.125-1.125-1.125H3.375Z" />
-                          </svg>
-                          
-                    </div> -->
-                    <h1 class="text-2xl text-zinc-900 dark:text-zinc-200">Sign in to OurBookStore</h1>
-                  
-                </div>
+<section
+  class="h-screen w-full flex flex-col text-zinc-900 p-4 items-center"
+>
+  <div class="h-full flex items-center">
+    <div
+      class=" lg:bg-neutral-50 overflow-hidden grid lg:grid-cols-2 gap-8 lg:h-[100vh] lg:w-screen"
+    >
+      <div class="grid place-content-center">
+        <div class="flex flex-col gap-5 justify-center p-4 lg:p-8 lg:pr-16">
+          <div class="flex flex-col items-center gap-4">
+           
+            <h1 class="text-2xl text-zinc-900 dark:text-zinc-200">
+              Sign in to OurBookStore
+            </h1>
+          </div>
 
-                <div class="flex flex-col items-center mt-8 gap-4">
-                  
-                    <div class="grid lg:grid-cols-2 gap-4 w-full">
-                        <button class="border-neutral-950/10 p-2 px-4 rounded-lg border hover:bg-yellow-600/10  text-neutral-900 duration-200 dark:border-white/5 dark:text-white flex items-center gap-2 justify-center">
-                            <span class="block h-5 w-5 ">
-                                <img src="/img/icons/google.svg" class="h-full w-full object-cover" alt="">
-                            </span>
-                            <span>With Google</span>
-                        </button>
-                        <button class="border-neutral-950/10 p-2 px-4 rounded-lg border hover:bg-yellow-600/10  text-neutral-900 duration-200 dark:border-white/5 dark:text-white flex items-center gap-2 justify-center">
-                            <span class="block h-5 w-5 ">
-                                <img src="/img/icons/facebook.svg" class="h-full w-full object-cover" alt="">
-                            </span>
-                            <span>With Facebook</span>
-                        </button>
-                        
-                    </div>
-
-                    <p class="text-zinc-500 font-light">or sign in using</p>
-                </div>
-    
-                <div class="grid gap-8">
-                    <form action="" class="flex flex-col gap-4">
-                        <div class="flex flex-col gap-2">
-                            <input type="email" name="" class="border outline-none focus:ring-2 focus:ring-offset-1 focus:ring-orange-600/50 duration-200 border-zinc-950/20 text-zinc-900 dark:text-neutral-100 bg-transparent hover:border-zinc-950/40 dark:border-white/10 rounded-lg p-2 placeholder:font-light" id="" placeholder="Email Adress">
-                        </div>
-                        <div class="flex flex-col gap-2">
-                            
-                            <input type="password" name="" class="border outline-none focus:ring-2 focus:ring-offset-1 focus:ring-orange-600/50 duration-200 border-zinc-950/20 text-zinc-900 dark:text-neutral-100 bg-transparent hover:border-zinc-950/40 dark:border-white/10 rounded-lg p-2 placeholder:font-light" id="" placeholder="Password">
-                        </div>
-        
-                        <button class="p-2 px-4 bg-gradient-to-b focus:scale-95 duration-300 from-yellow-300 to-yellow-600 mt-4 text-white rounded-lg font-semibold flex flex-col overflow-hidden h-12 items-center group">
-                            <span class="block mt-1 group-hover:-mt-8 duration-300">Sign in</span>
-                            <span class="mt-6 group-hover:mt-3 duration-300">Sign in</span>
-                        </button>
-                    </form>
-    
-                    <div class="flex flex-col lg:flex-row justify-center gap-5 lg:gap-8 items-center text-zinc-500 dark:text-zinc-100">
-                        <a href="" class="hover:text-orange-600 duration-300 font-light">Forgot your password ?</a> 
-                        <a routerLink="../sign_up" class="hover:text-orange-600 duration-300 font-light">Sign up</a>
-                    </div>
-                    
-                </div>
-    
-    
+          <div class="flex flex-col items-center mt-8 gap-4">
+            <div class="grid lg:grid-cols-2 gap-4 w-full">
+              <button
+                class="border-neutral-950/10 p-2 px-4 rounded-lg border hover:bg-yellow-600/10 text-neutral-900 duration-200 dark:border-white/5 dark:text-white flex items-center gap-2 justify-center"
+              >
+                <span class="block h-5 w-5">
+                  <img
+                    src="/img/icons/google.svg"
+                    class="h-full w-full object-cover"
+                    alt=""
+                  />
+                </span>
+                <span>With Google</span>
+              </button>
+              <button
+                class="border-neutral-950/10 p-2 px-4 rounded-lg border hover:bg-yellow-600/10 text-neutral-900 duration-200 dark:border-white/5 dark:text-white flex items-center gap-2 justify-center"
+              >
+                <span class="block h-5 w-5">
+                  <img
+                    src="/img/icons/facebook.svg"
+                    class="h-full w-full object-cover"
+                    alt=""
+                  />
+                </span>
+                <span>With Facebook</span>
+              </button>
             </div>
-           </div>
 
-            <div class="hidden lg:block">
-                <div class="h-full w-full leftside rounded-l-[3rem] grid place-content-center">
-                    <div class="w-full flex justify-center">
-                        <!-- <div class="bg-neutral-100 border-t-2 border-orange-500 lg:p-6 rounded-2xl w-[60%]">
+            <p class="text-zinc-500 font-light">or sign in using</p>
+          </div>
+
+          <div class="grid gap-8">
+            <form action="" class="flex flex-col gap-4">
+              <div class="flex flex-col gap-2">
+                <input
+                  type="email"
+                  name=""
+                  class="border outline-none focus:ring-2 focus:ring-offset-1 focus:ring-orange-600/50 duration-200 border-zinc-950/20 text-zinc-900 dark:text-neutral-100 bg-transparent hover:border-zinc-950/40 dark:border-white/10 rounded-lg p-2 placeholder:font-light"
+                  id=""
+                  placeholder="Email Adress"
+                />
+              </div>
+              <div class="flex flex-col gap-2">
+                <input
+                  type="password"
+                  name=""
+                  class="border outline-none focus:ring-2 focus:ring-offset-1 focus:ring-orange-600/50 duration-200 border-zinc-950/20 text-zinc-900 dark:text-neutral-100 bg-transparent hover:border-zinc-950/40 dark:border-white/10 rounded-lg p-2 placeholder:font-light"
+                  id=""
+                  placeholder="Password"
+                />
+              </div>
+
+              <button
+                class="p-2 px-4 bg-gradient-to-b focus:scale-95 duration-300 from-yellow-300 to-yellow-600 mt-4 text-white rounded-lg font-semibold flex flex-col overflow-hidden h-12 items-center group"
+              >
+                <span class="block mt-1 group-hover:-mt-8 duration-300"
+                  >Sign in</span
+                >
+                <span class="mt-6 group-hover:mt-3 duration-300">Sign in</span>
+              </button>
+            </form>
+
+            <div
+              class="flex flex-col lg:flex-row justify-center gap-5 lg:gap-8 items-center text-zinc-500 dark:text-zinc-100"
+            >
+              <a href="" class="hover:text-orange-600 duration-300 font-light"
+                >Forgot your password ?</a
+              >
+              <a
+                routerLink="../sign_up"
+                class="hover:text-orange-600 duration-300 font-light"
+                >Sign up</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="hidden lg:block">
+        <div
+          class="h-full w-full leftside rounded-l-[3rem] grid place-content-center"
+        >
+          <div class="w-full flex justify-center">
+            <!-- <div class="bg-neutral-100 border-t-2 border-orange-500 lg:p-6 rounded-2xl w-[60%]">
                             <div >
                                 <p class="">
                                     " Eventi is great for those who want to sell online tickets for their physical or online event, i really like the experience "</p>
@@ -82,9 +111,9 @@
                                 </div>
                             </div>
                         </div> -->
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
