--- a/ourbookstore/src/app/layouts/home/home.component.html
+++ b/ourbookstore/src/app/layouts/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<section class="lg:h-[100vh] overflow-hidden flex">
+  <div class="w-[16vw] overflow-hidden">
+    <app-sidebar />
+  </div>
+  <div>
+    <router-outlet />
+  </div>
+</section>
