--- a/ourbookstore/src/app/layouts/landingpage/landingpage.component.html
+++ b/ourbookstore/src/app/layouts/landingpage/landingpage.component.html
@@ -1,7 +1,19 @@
 <section class="h-[100vh] grid place-content-center">
-    <div class="flex items-center gap-4">
-        <a routerLink="../sign-in" class="block p-2 px-4 bg-yellow-600/10 text-yellow-600">Login</a>
-        <a routerLink="../sign-up" class="block p-2 px-4 bg-yellow-600/10 text-yellow-600">SignUp</a>
-        <a routerLink="../home" class="block p-2 px-4 bg-yellow-600/10 text-yellow-600">Home</a>
-    </div>
-</section>  
+  <div class="flex items-center gap-4">
+    <a
+      routerLink="../sign-in"
+      class="block p-2 px-4 bg-yellow-600/10 text-yellow-600"
+      >Login</a
+    >
+    <a
+      routerLink="../sign-up"
+      class="block p-2 px-4 bg-yellow-600/10 text-yellow-600"
+      >SignUp</a
+    >
+    <a
+      routerLink="../home"
+      class="block p-2 px-4 bg-yellow-600/10 text-yellow-600"
+      >Home</a
+    >
+  </div>
+</section>
