--- a/ourbookstore/src/app/layouts/notfound/notfound.component.html
+++ b/ourbookstore/src/app/layouts/notfound/notfound.component.html
@@ -1,10 +1,17 @@
-<section class="h-[100vh] bg-yellow-50 grid place-content-center"> 
-    <div class="flex flex-col items-center"> 
-        <div>
-            <h3 class="text-[12rem] font-bold">4<span class="text-yellow-700">0</span>4</h3>
-        </div>
-        <div>
-            <p class="text-xl">This page is not found , <a routerLink="../landingpage" class="text-yellow-700 underline">Go to home</a></p>
-        </div>
+<section class="h-[100vh] bg-yellow-50 grid place-content-center">
+  <div class="flex flex-col items-center">
+    <div>
+      <h3 class="text-[12rem] font-bold">
+        4<span class="text-yellow-700">0</span>4
+      </h3>
     </div>
+    <div>
+      <p class="text-xl">
+        This page is not found ,
+        <a routerLink="" class="text-yellow-700 underline"
+          >Go to home</a
+        >
+      </p>
+    </div>
+  </div>
 </section>
