refactor sidebar add topbar and library component

--- a/ourbookstore/src/app/components/users/auth/user-login/user-login.component.html
+++ b/ourbookstore/src/app/components/users/auth/user-login/user-login.component.html
@@ -83,7 +83,7 @@
                 >Forgot your password ?</a
               >
               <a
-                routerLink="../sign_up"
+                routerLink="../sign-up"
                 class="hover:text-orange-600 duration-300 font-light"
                 >Sign up</a
               >
