--- a/ourbookstore/src/app/components/users/auth/user-sign-up/user-sign-up.component.html
+++ b/ourbookstore/src/app/components/users/auth/user-sign-up/user-sign-up.component.html
@@ -89,10 +89,11 @@
                 >Forgot your password ?</a
               >
               <a
-                routerLink="../sign_in"
+                routerLink="../sign-in"
                 class="hover:text-orange-600 duration-300 font-light"
-                >Sign in</a
               >
+                Sign in
+              </a>
             </div>
           </div>
         </div>
