--- a/ourbookstore/src/app/components/shared/sidebar/sidebar.component.html
+++ b/ourbookstore/src/app/components/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
         <ul class="flex flex-col gap-2">
           <li>
             <a
-              routerLink="store"
+              routerLink="dashboard"
               routerLinkActive="bg-yellow-500/10 text-yellow-600"
               class="p-1 hover:bg-yellow-500/10 rounded-md duration-300 px-2 flex items-center gap-2"
             >
@@ -20,16 +20,41 @@
                   viewBox="0 0 24 24"
                   stroke-width="1.5"
                   stroke="currentColor"
-                  class="size-[1.1rem]"
+                  class="size-5"
                 >
                   <path
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z"
+                    d="M12 21v-8.25M15.75 21v-8.25M8.25 21v-8.25M3 9l9-6 9 6m-1.5 12V10.332A48.36 48.36 0 0 0 12 9.75c-2.551 0-5.056.2-7.5.582V21M3 21h18M12 6.75h.008v.008H12V6.75Z"
                   />
                 </svg>
               </span>
-              <span>Store</span>
+              <span>Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a
+              routerLink="library"
+              routerLinkActive="bg-yellow-500/10 text-yellow-600"
+              class="p-1 hover:bg-yellow-500/10 rounded-md duration-300 px-2 flex items-center gap-2"
+            >
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-5"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 21v-8.25M15.75 21v-8.25M8.25 21v-8.25M3 9l9-6 9 6m-1.5 12V10.332A48.36 48.36 0 0 0 12 9.75c-2.551 0-5.056.2-7.5.582V21M3 21h18M12 6.75h.008v.008H12V6.75Z"
+                  />
+                </svg>
+              </span>
+              <span>Library</span>
             </a>
           </li>
 
