adding message component

--- a/ourbookstore/src/app/components/shared/sidebar/sidebar.component.html
+++ b/ourbookstore/src/app/components/shared/sidebar/sidebar.component.html
@@ -133,6 +133,8 @@
           </li>
           <li>
             <a
+              routerLink="message"
+              routerLinkActive="bg-yellow-500/10 text-yellow-600"
               class="p-1 hover:bg-yellow-500/10 rounded-md duration-300 px-2 flex items-center gap-2"
             >
               <span>
