--- a/ourbookstore/src/app/layouts/dashboard/dashboard.component.html
+++ b/ourbookstore/src/app/layouts/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<section class="w-full">
+<section class="w-full lg:h-[100vh] bg-neutral-50/50 overflow-y-scroll">
     <div>
         <!-- <app-admin-dashboard />
         <app-seller-dashboard /> -->
